# MCO_bsp-test

./: CMakeLists.txt  README  README.md  loop.c  main.c
audio/: CMakeLists.txt  alsa-audio-runner-poll.c  alsa-audio-runner-wait.c  alsa-audio-runner.c  alsa-audio-runner.h  alsa-device.c  alsa-device.h  alsa-poll-example.c  audio-runner.c  loop.c
auvitran/: avxDefs.h  avxSpi.c  avxSpi.h  rack-runner.c  rack-runner.h  rackAuvitran.c  rackAuvitran.h  spi.c  spi.h
elite/: elite-runner.c  elite-slave-ready-gpio.c  elite-slave-ready-gpio.h  elite-spidev.c  elite-spidev.h  elite-tdma-runner.c  elite-uart-dsp-runner.c
gpiod/: elite-gpiod-runner.c  elite-slave-ready-gpio.c  elite-slave-ready-gpio.h
inc/: esg-bsp-test.h
info/: gpioinfo.md
multi_core_tools/: commonMco1.h  wi_time.c  wi_time.h
multi_core_tools/Common/: commParam.h  protocoleDSP.h
multi_core_tools/variant/: variant-common.h  variant.c  variant.h
options/: README.md  cmdline.c  cmdline.h  options.ggo
spidev/: esg-spidev.c  esg-spidev.h
stm32/: stm32-runner.c  stm32.c  stm32.h
tdma/: elite-tdma-runner.c
uart/: elite-uart-dsp-runner.c  elite-uart-runner.c  elite-uart.h
